Fix not showing columns in add columns modal window

--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -20,3 +20,8 @@
 .add-columns-button {
   color: #212121;
 }
+
+mat-row {
+  height: 2rem;
+  min-height: 0;
+}
